css/style.css
body {
    box-sizing: border-box;
    background-color: grey;
}

.container {
    
}


h4 {
    color: #fff;
}

li {
    margin-bottom: 30px;
}

li>a>img {
    height: 48px;
    width: 48px;
}

.noBull {
    list-style-type: none;
}


.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 60px;
    line-height: 60px;
    background-color: #343A40;
    color:#fff;
    text-align: center;
    padding-top: 25px;
}

